--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-art": "^16.13.1",
     "react-dom": "^16.14.0",
     "react-native-web": "^0.9.13"
+  },
+  "dependencies": {
+    "react-native-markdown-display": "^7.0.2"
   }
 }
