--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "ISC",
-  "author": "",
+  "author": "Extend Studio",
   "scripts": {
     "start": "adalo dev",
     "login": "adalo login",
